# llm-second-opinion

./: .gitignore  README.md  USAGE.md  config.example.json  pyproject.toml
docs/: index.html
src/llm_second_opinion/: __init__.py  __main__.py  config.py  logging_setup.py  server.py
src/llm_second_opinion/providers/: __init__.py  base.py  gemini.py  grok.py  openai_provider.py
